fixed bug on mobile

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -81,7 +81,7 @@
   margin-bottom: 6px;
 
   @include mediaBig {
-    margin-bottom: 8px;
+    //margin-bottom: 8px;
   }
 }
 
@@ -100,6 +100,12 @@
 }
 
 @media(max-width: 800px) {
+
+  .card {
+    top: -100px;
+
+  }
+
   .card__title {
     font-size: 16px;
     line-height: 1.4;
