--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -23,14 +23,11 @@ html, body {
   background-position: 50% 50%;
   //background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100vh;
-  width: 100vw;
+  //height: 100vh;
+  //width: 100vw;
   overflow: hidden;
-
-
-
-  margin: 0;
-  padding: 0;
-  letter-spacing: 1px;
-  line-height: 34px;
+  //margin: 0;
+  //padding: 0;
+  //letter-spacing: 1px;
+  //line-height: 34px;
 }
