--- a/app/assets/stylesheets/components/_slide.scss
+++ b/app/assets/stylesheets/components/_slide.scss
@@ -183,7 +183,7 @@ input {
     //height: auto;
     padding-left: 0px;
     //padding-right: 75px;
-    padding-top: 200px;;
+    padding-top: 100px;;
   }
 
   .slide-button {
@@ -196,10 +196,10 @@ input {
   }
 
   .slide__content {
-    width: 100%;
+    width: 90%;
     //display: block;
     left: 0;
-    top: -100px;
+    height: 100%;
 
 
   }
